Slightly more complex uhhh scaffolding???

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
    <head>
       <script src="jquery-3.4.1.min.js"></script>
       <script src="main.js"></script>
+      <script src="utilities.js"></script>
       <link rel="stylesheet" href="main.css">
    </head>
    <body>
@@ -9,15 +10,15 @@
            it might be better to have EVERYTHING in javascript for consistency. 
            Uhhh but maybe containers are just better left here??? -->
       <div id="leftpane" class="pane">
-         <div id="leftscroller" class="scroller">
+         <div id="leftscroller" class="scroller fill">
          </div>
       </div>
       <div id="rightpane" class="pane">
-         <div id="rightscroller" class="scroller">
+         <div id="rightscroller" class="scroller fill">
             <div id="mainlist">
             </div>
          </div>
-         <div id="userlink">
+         <div id="smallnav" class="controlbox">
          </div>
       </div>
    </body>
