--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
    <head>
+      <meta charset="UTF-8">
+      <meta name="rating" content="general">
+      <meta name="viewport" content="width=device-width,maximum-scale=1">
       <script src="jquery-3.4.1.min.js"></script>
-      <script src="main.js"></script>
       <script src="utilities.js"></script>
+      <script src="main.js"></script>
       <link rel="stylesheet" href="main.css">
    </head>
    <body>
