--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
       <meta charset="UTF-8">
       <meta name="rating" content="general">
       <meta name="viewport" content="width=device-width,maximum-scale=1">
+      <!-- Jquery FIRST because everything needs it -->
       <script src="jquery-3.4.1.min.js"></script>
-      <script src="utilities.js"></script>
+      <!-- I KNOW these things have "no" deps -->
+      <script src="utils/constants.js"></script>
+      <script src="utils/ajax.js"></script>
+      <!-- Dependencies on constants -->
+      <script src="utils/log.js"></script>
+      <script src="utils/generate.js"></script>
+      <script src="utils/forms.js"></script>
+      <!-- And I KNOW this could be dependent on ANYTHING -->
+      <script src="utils/unsorted.js"></script>
       <script src="main.js"></script>
       <link rel="stylesheet" href="main.css">
    </head>
