--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
       <!-- Jquery FIRST because everything needs it -->
       <script src="jquery-3.4.1.min.js"></script>
       <!-- I KNOW these things have "no" deps -->
-      <script src="utils/constants.js"></script>
-      <script src="utils/ajax.js"></script>
+      <script src="app/constants.js"></script>
+      <script src="app/request.js"></script>
       <!-- Dependencies on constants -->
-      <script src="utils/log.js"></script>
-      <script src="utils/generate.js"></script>
-      <script src="utils/forms.js"></script>
-      <!-- And I KNOW this could be dependent on ANYTHING -->
-      <script src="utils/unsorted.js"></script>
+      <script src="app/log.js"></script>
+      <script src="app/generate.js"></script>
+      <script src="app/forms.js"></script>
       <script src="main.js"></script>
       <link rel="stylesheet" href="main.css">
    </head>
