More user experience/cleanup

--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
          <div id="smallnav" class="controlbox">
          </div>
       </div>
+      <div id="cache">
+      </div>
    </body>
 </html>
