--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
       <script src="jquery-3.4.1.min.js"></script>
       <!-- I KNOW these things have "no" deps -->
       <script src="app/constants.js"></script>
-      <script src="app/request.js"></script>
-      <!-- Dependencies on constants -->
       <script src="app/log.js"></script>
+      <!-- Dependencies on constants -->
+      <script src="app/request.js"></script>
+      <!--<script src="app/forms.js"></script>-->
       <script src="app/generate.js"></script>
-      <script src="app/forms.js"></script>
+      <script src="app/complexGenerate.js"></script>
+      <script src="app/appGenerate.js"></script>
       <script src="main.js"></script>
       <link rel="stylesheet" href="main.css">
    </head>
