--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <script src="app/constants.js"></script>
       <script src="app/log.js"></script>
       <!-- Dependencies on constants -->
+      <script src="app/spa.js"></script>
       <script src="app/request.js"></script>
       <script src="app/generate.js"></script>
       <script src="app/complexGenerate.js"></script>
