Beginning of refactor for templating

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
       <meta charset="UTF-8">
       <meta name="rating" content="general">
       <meta name="viewport" content="width=device-width,maximum-scale=1">
-      <!-- Jquery FIRST because everything needs it -->
+      <!-- Jquery/Mustache FIRST because everything needs it -->
       <script src="jquery-3.4.1.min.js"></script>
+      <script src="mustache.min.js"></script>
       <!-- I KNOW these things have "no" deps -->
       <script src="app/constants.js"></script>
       <script src="app/log.js"></script>
       <!-- Dependencies on constants -->
+      <script src="app/template.js"></script>
       <script src="app/spa.js"></script>
       <script src="app/request.js"></script>
       <script src="app/generate.js"></script>
