--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       <script src="app/constants.js"></script>
       <script src="app/log.js"></script>
       <!-- Dependencies on constants -->
+      <script src="app/htmlUtilities.js"></script>
       <script src="app/template.js"></script>
       <script src="app/spa.js"></script>
       <script src="app/request.js"></script>
       <script src="app/generate.js"></script>
-      <script src="app/complexGenerate.js"></script>
       <script src="app/appGenerate.js"></script>
       <script src="main.js"></script>
       <link rel="stylesheet" href="main.css">
