Moved generate to form.js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <script src="app/template.js"></script>
       <script src="app/spa.js"></script>
       <script src="app/request.js"></script>
-      <script src="app/generate.js"></script>
+      <script src="app/form.js"></script>
       <script src="app/appGenerate.js"></script>
       <script src="main.js"></script>
       <link rel="stylesheet" href="main.css">
