Moved libraries around

--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
       <meta name="rating" content="general">
       <meta name="viewport" content="width=device-width,maximum-scale=1">
       <!-- Jquery/Mustache FIRST because everything needs it -->
-      <script src="jquery-3.4.1.min.js"></script>
-      <script src="mustache.min.js"></script>
+      <script src="common/jquery-3.4.1.min.js"></script>
+      <script src="common/mustache.min.js"></script>
+      <script src="common/libbo.js"></script>
       <!-- I KNOW these things have "no" deps -->
       <script src="app/constants.js"></script>
-      <script src="app/log.js"></script>
       <!-- Dependencies on constants -->
       <script src="app/htmlUtilities.js"></script>
       <script src="app/template.js"></script>
-      <script src="app/spa.js"></script>
       <script src="app/request.js"></script>
       <script src="app/form.js"></script>
       <script src="app/appGenerate.js"></script>
