UIKit and tests

--- a/v2/new2/index.html
+++ b/v2/new2/index.html
@@ -6,23 +6,10 @@
       <meta name="viewport" content="width=device-width"><!--,maximum-scale=1">-->
       <meta name="rating" content="general">
       <meta name="description" content="New SmileBASIC Source">
-      <!-- LOC:UIFRAMEWORK -->
-      <link rel="stylesheet" href="uikit-3.5.5/css/uikit.min.css" />
-      <script src="uikit-3.5.5/js/uikit.min.js"></script>
-      <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:STYLE -->
-      <!--<link rel="stylesheet" href="index.css?v=1596144144">-->
+      <link rel="stylesheet" href="index.css?v=1596144144">
       <!-- LOC:SCRIPT -->
-      <!--<script src="index.js?v=123"></script>-->
-<script>
-function addthing()
-{
-   var a = document.createElement("div");
-   a.setAttribute("uk-alert", "");
-   a.innerHTML = '<a class="uk-alert-close" uk-close></a> <h3>Notice</h3> <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>';
-   leftpane.appendChild(a);
-}
-</script>
+      <script src="index.js?v=123"></script>
    </head>
    <!-- LOC:BODY -->
    <body>
@@ -45,7 +32,6 @@ function addthing()
                   <div id="posting">
                      <textarea id="posttext"></textarea>
                   </div>
-                  <button onclick="addthing()">add thing</button>
                </div>
                <!-- LOC:RIGHTPANE -->
                <div id="rightpane" class="layer">
