Some sidebar nav

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ body
    background-color: #444;
    color: #AAA;
 }
+a:hover { color: inherit; }
 #top-nav a:hover
 {
    color: #CCC;
@@ -35,17 +36,39 @@ body
 }
 #right-pane
 {
-   background-color: #F7F7F7;
+   background-color: rgba(128,128,128,0.05);
+   border-left: 2px solid rgba(128,128,128,0.1);
 }
 #pane-resizer
 {
    background-color: gray;
-   width: 20em;
+   width: 30em;
    resize: horizontal;
    transform: scale(-1,1);
    overflow: hidden;
    max-width: calc(100vw - 1px);
    min-width: 10em;
+}
+#pane-resizer > *
+{
+   transform: scale(-1,1);
+}
+#right-pane-nav
+{
+   background-color: rgba(128,128,128,0.1);
+}
+#right-pane-nav a:hover
+{
+   background-color: rgba(128,255,240,0.1);
+}
+#right-pane-nav .uk-active
+{  /* Special styling JUST for the sidbar nav */
+   background-color: rgba(128,255,240,0.4);
+}
+#logs
+{
+   font-family: monospace;
+   font-size: 0.9em;
 }
 </style>
       <!-- LOC:SCRIPT -->
@@ -78,8 +101,29 @@ body
                showing you exactly wehre the pane ends</p>
             </div>
             <!-- LOC:RIGHTPANE -->
-            <div id="right-pane" class="uk-width-auto">
-               <div id="pane-resizer">resize</div>
+            <div id="right-pane" class="uk-width-auto uk-flex uk-flex-column uk-height-1-1">
+               <!-- LOC:RIGHTPANENAV -->
+               <div id="right-pane-nav" class="tabnav uk-grid uk-grid-collapse 
+                   uk-child-width-expand uk-text-center" 
+                uk-switcher>
+   <!-- Shifted over for convenience, want to fit on one line please -->
+   <div><a href="" class="uk-width-1-1" uk-icon="icon: user; ratio: 2"></a></div>
+   <div><a href="" class="uk-width-1-1" uk-icon="icon: server; ratio: 2"></a></div>
+   <div><a href="" class="uk-width-1-1" uk-icon="icon: heart; ratio: 2"></a></div>
+               </div>
+               <!-- LOC:RIGHTPANECONTENT -->
+               <ul id="right-pane-content" class="uk-switcher uk-flex-1" uk-overflow-auto>
+                  <li>User</li>
+                  <li>
+                     <ul id="logs" class="uk-list uk-list-striped uk-list-collapse">
+                        <li>Log begin (document initialize, no javascript yet)</li>
+                     </ul>
+                  </li>
+                  <li>heart</li>
+               </ul>
+               <div id="pane-resizer">
+                  <span>resize</span>
+               </div>
             </div>
          </div>
       </div>
