--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@ window.onload = function()
                    uk-child-width-expand uk-text-center" 
                 uk-switcher="swiping: false;">
       <!-- Shifted over for convenience, want to fit on one line please -->
-      <div data-utgl><a href="" class="uk-width-1-1" 
+      <div data-utgl><a href="" class="uk-display-block"
             uk-icon="icon: user; ratio: 2"></a></div>
-      <div data-utgl hidden><a href="" class="uk-width-1-1"><img id="nav-user-avatar" 
+      <div data-utgl hidden><a href="" class="uk-display-block"><img id="nav-user-avatar" 
             data-src="tempicon.png" width="40" height="40" uk-img></img></a></div>
-      <div data-utgl hidden><a href="" class="uk-width-1-1" 
+      <div data-utgl hidden><a href="" class="uk-display-block" 
             uk-icon="icon: list; ratio: 2"></a></div>
-      <div data-utgl hidden><a href="" class="uk-width-1-1" 
+      <div data-utgl hidden><a href="" class="uk-display-block" 
             uk-icon="icon: heart; ratio: 2"></a></div>
-      <div><a href="" class="uk-width-1-1" 
+      <div><a href="" class="uk-display-block" 
             uk-icon="icon: server; ratio: 2"></a></div>
                </div>
                <!-- LOC:RIGHTPANECONTENT -->
